[package]
name = "codeguard"
version = "0.1.0"
edition = "2021"
description = "A TUI tool for running code analysis and testing tools"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
async-trait = "0.1"
